# Final_Project_Herman_Arielle

./: CONTRIBUTING.rst  README.md  Vignette.ipynb  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: final_project_herman_arielle.rst  modules.rst
final_project_herman_arielle/: final_project_herman_arielle.py
tests/: test_final_project_herman_arielle.py
