[tool.poetry]
name = "final_project_herman_arielle"
version = "0.1.0"
description = "Python wrapper for University of British Columbia Online Collections"
authors = ["aeherman <aeh2196@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
