[tool.poetry]
name = "final_project_herman_arielle"
version = "0.1.0"
description = "Python wrapper for University of British Columbia Online Collections"
authors = ["aeherman <aeh2196@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
numpy = "^1.19.4"
jupyter = "^1.0.0"
ipykernel = "^5.4.2"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter-kite = "^1.2.0"
requests = "^2.25.1"
jupyterthemes = "^0.20.0"
hypothesis = "^5.43.3"
cookiecutter = "^1.7.2"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]
Sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
